# rag_workspace

./: .gitignore  Cargo.toml  README.md  extract.rs
example_traverse_target/: Cargo.toml
example_traverse_target/ast_examples/: AST_examples.md  function_example.md
example_traverse_target/src/: main.rs  stepping.rs
parser/: Cargo.toml  extracted_data.ron  output.txt  project_structure.txt
parser/data/: extracted_data.ron
parser/instructions/: aider_instructions.md
parser/src/: debug.rs  extract.rs  function_extractor.rs  impl_extractor.rs  main.rs  saver.rs  struct_extractor.rs  traverse.rs
parser/src/utils/: mod.rs  print_blocks.rs  print_children.rs  print_extracted_stats.rs
