[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[features]
collect_node_kinds = []

[dependencies]
tree-sitter = { version = "0.24", features = ["std"] }
tree-sitter-rust = "0.23"
walkdir = "2"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.96"
prettytable = "0.10"
